--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="app.js"></script>
     <script>src="bold.js"</script>
+    <script>src="italic.js"</script>
     
 </body>
 <!-- Author: [M.A P PUSHPIKA] | [CT/2019/055] -->
